style: Remove flexbox centering from world map to fix cutoff
- Revert flexbox display properties that were cutting off map content
- Add max-width and auto margins to center other content in locations section
- World map maintains full viewport width without being squeezed

--- a/src/components/stats/WorldMap.css
+++ b/src/components/stats/WorldMap.css
@@ -11,9 +11,6 @@
   margin-left: -50vw;
   margin-right: -50vw;
   height: 550px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* Responsive height for mobile devices */
